# Opportunity-finder

./: .env.example  .gitignore  README.md  pyproject.toml
config/: scoring.yaml  sources.yaml
docs/: opportunity-finder-design-doc.md  opportunity-finder-one-pager.md
docs/handoffs/: 2026-05-18.md
docs/supply-chain-vets/: m3.md
scripts/: refresh_app_ids.py
scripts/git-hooks/: pre-commit
src/opfinder/: config.py  dedup.py  injection_patterns.py  logging_setup.py  main.py  models.py  notifier.py  scorer.py  sheet_writer.py
src/opfinder/prompts/: buyer_appstore.txt  buyer_b2b.txt  money.txt  pain.txt
src/opfinder/scrapers/: app_store.py  base.py  hn.py  play_store.py  reddit.py
tests/fixtures/app_store/: reviews.json
tests/fixtures/hn/: sample.json
tests/fixtures/play_store/: reviews.json
tests/integration/: test_main.py
tests/unit/: test_app_store.py  test_dedup.py  test_hn.py  test_injection_patterns.py  test_models.py  test_notifier.py  test_play_store.py  test_reddit.py  test_scorer.py  test_scraper_is_configured.py  test_sheet_writer.py
