[project]
name = "opportunity-finder"
version = "0.1.0"
description = "Weekly opportunity discovery pipeline (internal tool, single user)."
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "praw>=7.7",
    "httpx>=0.27",
    "app-store-web-scraper>=0.2.0,<0.3",
    "google-play-scraper>=1.2.7,<2",
    "anthropic>=0.103,<1",
    "gspread>=6.2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv]
default-groups = ["dev"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opfinder"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
